added login endpoint for registry
