# src/main/resources/rapidpass-openapi.yaml
@@ -1,9 +1,9 @@
 openapi: 3.0.0
 servers:
+  - url: /api/v1
   # Added by API Auto Mocking Plugin
   - description: SwaggerHub API Auto Mocking
     url: https://virtserver.swaggerhub.com/tiongks/RapidPass/1.0.0
-  - url: /api/v1
 info:
   description: >-
     API for Rapid Pass Web Services. Guys, currently super simple pass ng API.
@@ -25,6 +25,35 @@ tags:
   - name: bulk
     description: bulk/batch operations
 paths:
+  /registry/auth:
+    post:
+      tags:
+        - dashboard
+      summary: >-
+        Authentication for Dashboard users. This allows access to the APIs for
+        approvals
+      operationId: loginAgency
+      description: >-
+        Called from the dashboard. When successful, an Auth Token will be returned
+        which can be used for the approvals API.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DashboardAuthRequest'
+      responses:
+        '200':
+          description: Login successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DashboardAuthResponse'
+        '401':
+          description: Incorrect username or password
+        '403':
+          description: Bad Request
+        '500':
+          description: Internal Server Error
   /registry/access-passes:
     post:
       tags:
@@ -572,3 +601,23 @@ components:
           type: string
           description: the JSON Web Token required for the device to access the APIs
           example: abcdefghijkl.mnopqrst.uvwxyz
+    DashboardAuthRequest:
+      type: object
+      description: The dashboard authentication request
+      properties:
+        username:
+          type: string
+          description: The username to login
+          example: user
+        password:
+          type: string
+          description: The password
+          example: supersecurepassword
+    DashboardAuthResponse:
+      type: object
+      description: The response when authentication is successful
+      properties:
+        accessCode:
+          type: string
+          description: A JSON Web Token that will be used to authenticate with the other API requests
+          example: abcd.efgh.ijkl
